[tool.poetry]
name = "pandemic"
version = "0.1.0"
description = "A 2D sidescroller used for practice writing games"
authors = ["Sean Gallagher <stgallag@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
