[tool.poetry]
name = "ursina-platformer-demo"
version = "0.1.0"
description = ""
authors = ["Sean Gallagher <stgallag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ursina = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
